--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<canvas width="500" height="285"></canvas>
-<div id="result"></div>
-<div id="win"></div>
-<div id="lose"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Egg Box</title>
+</head>
+<body>
+    <canvas width="500" height="285"></canvas>
+    <div id="result"></div>
+    <div id="win"></div>
+    <div id="lose"></div>
+</body>
+</html>
