--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egg Box</title>
 </head>
 <body>
@@ -13,3 +11,5 @@
     <div id="lose"></div>
 </body>
 </html>
+
+<script src="index.js"></script>
