--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Egg Box</title>
 </head>
 <body>
-    <canvas width="500" height="285"></canvas>
+    <canvas width="700" height="400"></canvas>
     <div id="result"></div>
     <div id="win"></div>
     <div id="lose"></div>
 </body>
 </html>
 
-<script src="index.js"></script>
+<script src="script.js"></script>
+<link rel="stylesheet" href="styles.css">
